Fixed misalignment on android game glass.

--- a/work/css/pages/games.styl
+++ b/work/css/pages/games.styl
@@ -54,17 +54,15 @@
          font-size: .8em
          background: url(../images/games/SmallTeamGlass_Larger.png)
          background-size: 140px 51px
-         width: 116px
+         width: 140px
          height: 51px
          text-align: center
          display: table
          position: relative
-         width: 116px
-         padding: 0 12px
          .inner
             display: table-cell
             height: 100%
-            width: 100%
+            padding: 0 12px
             vertical-align: middle
             white-space: normal
          .team
